# TKX-Email-Generator

./: README.md  app.py  pyproject.toml
templates/: announcement_featured_template.html  announcement_template.html  index.html  ticket_analysis.html  upcoming_announcement_template.html  upcoming_template.html
