[tool.poetry]
name = "tkx-upcoming-event-email-generator"
version = "0.1.0"
description = ""
authors = ["CrazySwami <Crazyswami13@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
streamlit = "^1.37.1"
pandas = "^2.2.2"
plotly = "^5.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"